HW6 corrections